[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobo-enterprise"
version = "1.0.0"
description = "Official Python client for the Jobo Enterprise Jobs API. Access millions of job listings from 45+ ATS platforms — Greenhouse, Lever, Workday, iCIMS, SmartRecruiters, and more. Build job boards, aggregators, and recruitment tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Jobo", email = "support@jobo.world" }
]
keywords = [
    "jobo", "jobs", "api", "enterprise", "job-board", "recruitment",
    "ats", "greenhouse", "lever", "workday", "smartrecruiters", "ashby",
    "bamboohr", "icims", "job-scraper", "job-listings", "job-data",
    "job-aggregator", "job-feed", "applicant-tracking-system", "hiring",
    "careers-page", "job-search-api", "bulk-jobs",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://jobo.world/enterprise/"
Documentation = "https://github.com/Prakkie91/jobo-python#readme"
Repository = "https://github.com/Prakkie91/jobo-python"
Issues = "https://github.com/Prakkie91/jobo-python/issues"

[tool.setuptools.packages.find]
include = ["jobo_enterprise*"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.mypy]
python_version = "3.9"
strict = true
